feat: integrate DoAPI framework and 36 SMPS modules into monorepo